--- a/docker/2.7-3.5/Dockerfile
+++ b/docker/2.7-3.5/Dockerfile
@@ -1,5 +1,7 @@
-FROM dockershelf/python:2.7-3.5
-MAINTAINER Luis Alejandro Martínez Faneyth <luis@huntingbears.com.ve>
+FROM dockershelf/python:2.7
+LABEL maintainer="Luis Alejandro Martínez Faneyth <luis@luisalejandro.org>"
+
+RUN apt-get update && apt-get install python3.5
 
 RUN pip2.7 install pypicontents
 RUN pip3.5 install pypicontents
