[REF] Fixing docker image issue.

--- a/docker/2.7/Dockerfile
+++ b/docker/2.7/Dockerfile
@@ -1,5 +1,5 @@
 FROM dockershelf/python:2.7
-LABEL maintainer="Luis Alejandro Martínez Faneyth <luis@luisalejandro.org>"
+LABEL maintainer="Luis Alejandro Martínez Faneyth <luis@collagelabs.org>"
 
 RUN pip install pypicontents
 
