--- a/docker/3.2/Dockerfile
+++ b/docker/3.2/Dockerfile
@@ -1,5 +1,5 @@
 FROM dockershelf/python:3.2
-LABEL maintainer="Luis Alejandro Martínez Faneyth <luis@luisalejandro.org>"
+LABEL maintainer="Luis Alejandro Martínez Faneyth <luis@collagelabs.org>"
 
 RUN pip install pypicontents
 
