[FIX] Fixing build.

--- a/docker/2.7-3.7/Dockerfile
+++ b/docker/2.7-3.7/Dockerfile
@@ -1,7 +1,8 @@
 FROM dockershelf/python:2.7
 LABEL maintainer="Luis Alejandro Martínez Faneyth <luis@collagelabs.org>"
 
-RUN apt-get update && apt-get install python3.7 python3-pip
+RUN apt-get update && apt-get install python3.7 python3-pip \
+    python3-setuptools python3-wheel
 
 RUN pip2.7 install pypicontents
 RUN pip3 install pypicontents
